# quizit

./: .gitignore  README.md  config.py  index.py  pyproject.toml  run.py
quizit/: config.py  index.py  quiz.py
quizit/quizzes/: test.yaml
quizit/templates/: player.html.j2
quizzes/: test.yaml
templates/: player.html.j2
